--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,11 +3,11 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "mcomp"
+name = "fcompdata"
 version = "0.1.0"
-description = "M-Competition time series datasets (M1, M3, Tourism) for Python"
+description = "Forecasting Competitions Datasets (M1, M3, Tourism) for Python"
 readme = "README.md"
-license = "MIT"
+license = "LGPL-3.0-or-later"
 requires-python = ">=3.10"
 authors = [
     { name = "Ivan Svetunkov", email = "ivan@svetunkov.com" },
@@ -21,7 +21,7 @@ keywords = [
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Science/Research",
-    "License :: OSI Approved :: MIT License",
+    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.10",
@@ -43,8 +43,8 @@ dev = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/config-i1/mcomp"
-Repository = "https://github.com/config-i1/mcomp"
+Homepage = "https://github.com/config-i1/fcompdata"
+Repository = "https://github.com/config-i1/fcompdata"
 
 [tool.hatch.build.targets.sdist]
 include = [
@@ -52,7 +52,7 @@ include = [
 ]
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/mcomp"]
+packages = ["src/fcompdata"]
 
 [tool.ruff]
 target-version = "py310"
